toc border issue fixes in dark mode

--- a/src/components/Feedback/styles.module.css
+++ b/src/components/Feedback/styles.module.css
@@ -12,9 +12,11 @@
   box-shadow: var(--ifm-global-shadow-tl);
   font-size: 14px;
 }
+
 .scrollToWrapper:hover {
   background-color: var(--ifm-color-primary);
 }
+
 .scrollToWrapper:active {
   transform: translateY(3px);
 }
@@ -27,8 +29,10 @@
   border-top: 1px solid var(--primary-neutral-200);
   margin-top: 1.5rem !important;
 }
+
 html[data-theme='dark'] .feedback {
   background-color: var(--color-gray-82);
+  border-top: 1px solid var(--header-border-bottom);
 }
 
 .numberRow {
@@ -37,7 +41,8 @@ html[data-theme='dark'] .feedback {
   /* justify-content: center; */
 }
 
-.numberCircle, .numberActive {
+.numberCircle,
+.numberActive {
   display: grid;
   place-items: center center;
   height: 30px;
@@ -58,25 +63,33 @@ html[data-theme='dark'] .feedback {
   display: grid;
   text-align: left;
 }
+
 .form h3 {
   font-size: 1.25rem;
   color: var(--ifm-heading-color);
   margin-bottom: 0.5rem;
 }
-.form input, .form textarea {
+
+.form input,
+.form textarea {
   border: none;
   border-radius: 6px;
   font-size: 1.1rem;
   padding: 0.75rem;
-  font-family: var(--ifm-font-family-base);
-  color: var(--color-gray-74);
+  font-size: 0.9375rem;
+  line-height: 1.625rem;
+  color: var(--primary-neutral-800);
   margin-top: 1rem;
   box-shadow: var(--ifm-global-shadow-lw);
   width: 100%;
+  border: 1px solid var(--primary-neutral-200);
 }
-.form input::placeholder, .form textarea::placeholder {
+
+.form input::placeholder,
+.form textarea::placeholder {
   color: var(--color-gray-36);
 }
+
 .form button {
   margin-left: auto;
   background: var(--ifm-color-primary);
@@ -93,12 +106,18 @@ html[data-theme='dark'] .feedback {
 .textAreaLabel {
   margin-top: 2rem !important;
 }
+
 .textAreaLabel p {
   margin-bottom: 0.5rem;
 }
 
 .buttonDisabled {
   background-color: var(--ifm-color-gray-500) !important;
+}
+
+html[data-theme='dark'] .form input,
+html[data-theme='dark'] .form textarea {
+  border: 1px solid var(--header-border-bottom);
 }
 
 html[data-theme='dark'] .feedback input,
@@ -115,6 +134,7 @@ html[data-theme='dark'] .feedback textarea {
   font-weight: 500;
   font-family: var(--ifm-font-family-base);
 }
+
 .successMessage p {
   margin-bottom: 0 !important;
 }
@@ -127,6 +147,7 @@ html[data-theme='dark'] .feedback textarea {
   font-size: 1.1rem;
   font-family: var(--ifm-font-family-base);
 }
+
 html[data-theme='dark'] .errorText {
   color: var(--ifm-color-primary-lighter);
 }
@@ -141,12 +162,15 @@ html[data-theme='dark'] .errorText {
   cursor: pointer;
   margin: 0px 6px !important;
 }
+
 .star:first-child {
   margin-left: 0px !important;
 }
+
 .star:last-child {
   margin-right: 0px !important;
 }
+
 .star:hover {
   transform: translateY(-3px) scale(1.1);
   transform-origin: center center;
