--- a/src/theme/TOC/styles.module.css
+++ b/src/theme/TOC/styles.module.css
@@ -16,3 +16,7 @@
     padding: 0 0.3rem;
   }
 }
+
+[data-theme='dark'] .tableOfContents {
+  border-left: 1px solid var(--header-border-bottom);
+}
